# spotiflow

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  api.html  cli.html  docker-env-config.yml  environment.yml  finetune.html  genindex.html  index.html  installation.html  napari.html  objects.inv  pretrained.html  py-modindex.html  pyproject.toml  searchindex.js  setup.cfg  setup.py  tox.ini  train.html
.doctrees/: api.doctree  cli.doctree  environment.pickle  finetune.doctree  index.doctree  installation.doctree  napari.doctree  pretrained.doctree  train.doctree
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cibuildwheel.yml  docker-publish.yml  docs.yaml  release.yml
BeadDetection/: BPA.py  beadtuner.py
_sources/: api.rst.txt  cli.rst.txt  finetune.rst.txt  index.rst.txt  installation.rst.txt  napari.rst.txt  pretrained.rst.txt  train.rst.txt
_static/: documentation_options.js
docs/source/: api.rst  cli.rst  conf.py  finetune.rst  index.rst  napari.rst  pretrained.rst  train.rst  usage.rst
examples/: 1_train.ipynb  2_inference.ipynb  3_finetune.ipynb  4_train_3d.ipynb
extra/: analyze_spot_clusters.py  annotation.md  annotation_ui.py  run_starfish_spotiflow.py
scripts/: finetune.sh  opt.py  predict_3d.py  predict_and_evaluate.sh  predict_dataset.py  predict_img.py  predict_zarr_multigpu.py  retrieve_metrics.py  test_predict3d.py  train.py  train_cfg.yaml  train_multichannel.py  train_simple.py  train_simple_3d.py
spotiflow/augmentations/: __init__.py
spotiflow/augmentations/pipeline/: pipeline.py
spotiflow/augmentations/test/: test_pipeline.py
spotiflow/augmentations/transforms/: __init__.py  base.py  crop.py  fliprot.py  intensity_shift.py  noise.py  rotation.py  scale.py  translation.py  utils.py
spotiflow/augmentations/transforms3d/: __init__.py  crop.py  fliprot.py  intensity_shift.py  noise.py  rotation.py  test_crop.py  translation.py
spotiflow/cli/: predict.py  train.py
spotiflow/data/: __init__.py  spots.py  spots3d.py
spotiflow/data/test/: test_datasets.py
spotiflow/lib/: filters.cpp  filters3d.cpp  point_nms.cpp  point_nms3d.cpp  spotflow2d.cpp  spotflow3d.cpp
spotiflow/model/: __init__.py  bg_remover.py  config.py  post.py  pretrained.py  spotiflow.py  trainer.py
spotiflow/model/backbones/: __init__.py  unet.py
spotiflow/sample_data/: __init__.py  datasets.py
spotiflow/starfish/: __init__.py  spotiflow_wrapper.py
spotiflow/test/: test_model_saveload.py  test_prediction.py
spotiflow/utils/: __init__.py  ci.py  fitting.py  get_file.py  matching.py  parallel.py  peaks.py  test_3d.py  utils.py
spotipy_torch/data/: __init__.py  spots.py
spotipy_torch/datasets/: __init__.py  base.py  spots.py
spotipy_torch/lib/: point_nms.cpp
spotipy_torch/model/: __init__.py  bg_remover.py  config.py  fpn.py  get_file.py  multihead.py  post.py  pretrained.py  spotipy.py  trainer.py
spotipy_torch/sample_data/: __init__.py
spotipy_torch/test/: test_model_saveload.py  test_prediction.py
spotipy_torch/utils/: __init__.py  matching.py  peaks.py  utils.py
tests/: test_data.py  test_fit.py  test_model.py  test_peaks.py  test_training.py  test_training_simple.py  utils.py
(+15 files in other folders)
