[metadata]
name = spotipy-torch
version = 0.1.0
author = Albert Dominguez Mantes
author_email = albert.dominguezmantes@epfl.ch
license = BSD 3-Clause License
description = spotipy-torch
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    configargparse
    csbdeep
    lightning
    networkx
    numpy
    pandas
    Pillow
    scikit_image
    scipy
    setuptools
    scikit-image
    tifffile
    # tormenter @ git+https://github.com/weigertlab/tormenter.git
    tqdm
    pydash
    wandb
python_requires = >=3.9

[flake8]
ignore = E116, E501, E203
