[metadata]
name = spotiflow
version = 0.1.0
author = Albert Dominguez Mantes
author_email = albert.dominguezmantes@epfl.ch
license = BSD 3-Clause License
description = spotiflow
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    configargparse
    csbdeep
    lightning
    networkx
    numerize
    numpy
    pandas
    Pillow
    pydash
    scikit_image
    scipy
    setuptools
    scikit-image
    tifffile
    torchvision
    tqdm
    typing-extensions
    wandb
python_requires = >=3.9

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
    tox
docs =
    sphinx
    sphinx-immaterial
napari =
    napari-spotiflow
starfish =
    starfish

[flake8]
ignore = E116, E501, E203
