[metadata]
name = spotiflow
author = Albert Dominguez Mantes, Martin Weigert
author_email = albert.dominguezmantes@epfl.ch, martin.weigert@epfl.ch
dynamic = ["version"]
license = BSD 3-Clause License
description = Accurate and efficient spot detection for microscopy data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    configargparse
    csbdeep
    lightning
    networkx
    numerize
    numpy
    pandas
    Pillow
    pydash
    scikit_image
    scipy
    setuptools
    scikit-image
    tensorboard
    tifffile
    torchvision
    tqdm
    typing-extensions
    wandb
python_requires = >=3.9, <3.12

[options.entry_points]
console_scripts =
    spotiflow-predict = spotiflow.cli.predict:main

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
    tox
docs =
    sphinx
    sphinx-immaterial
napari =
    napari-spotiflow
starfish =
    starfish

[flake8]
ignore = E116, E501, E203
